# pandas_clone

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
src/pandas_clone/: __init__.py
src/pandas_clone/core/: __init__.py  frame.py  index.py  series.py
tests/core/: test_frame.py  test_index.py  test_series.py
